support Java 8, fix test for windows